tests/ctu/pass/array-of.ct
export var x = [ 25, 64, 222 ]!int;

export def test(): void {
    x[0] = 0;
}
